--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "cwg": "^0.2.2",
     "vue": "^3.2.13"
   },
   "devDependencies": {
